--- a/mod2_solution/style.css
+++ b/mod2_solution/style.css
@@ -23,12 +23,12 @@ h1 {
 
 .box{
   width: 100%;
-  overflow: none;
+  overflow: auto;
 }
 
 
 .content-name{
-  overflow: none;
+  overflow: auto;
   text-align: center;
   border: 4px solid black;
   width: 100px;
